Small changes to make it Java 1.8 compatible